# pico_drag_n_drop_programmer

./: .gitignore  CMakeLists.txt  Fat16Struct.h  README.md  checkUF2.h  fat12.h  main.c  msc_disk.c  msc_disk.h  usb_descriptors.c
FileOnPIco/: INDEX.HTM
fatImages/: PicoImage.7z  README.md  TinyUSBFat12.img
uploads/: hello_uart.uf2
